# ledger-creative-analyzer

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LESSONS.md  LICENSE  README.md  brief_generator.py  creative_analyzer.py  demo_e2e.py  demo_full_flow.py  demo_mock_loop.py  demo_olipop.py  generate_intro.py  pyproject.toml  requirements.txt  retry_seedance.sh  smoke_test.py
.github/workflows/: test.yml
demo/: mock_olipop.json
docs/: ARCHITECTURE.md  butterbase_jobs_schema.json  overview.html  pr-draft-spec-lesson.md  seedance_corporate_debriefer_prompt.md
docs/features/: research-scout-landscape.md  thedi-features-roadmap.md  yutori-reference.md  yutori-reference.urls.txt
docs/interview-prep/: 00-master-brief.md  01-interviewer-subith-shajee.md  02-saviynt-company.md  04-iam-domain-primer.md  05-ai-in-work-story.md  06-question-bank.md  job-description.md
docs/routines/: spec-lesson-daily-rollup.md
examples/: basic_usage.sh
ledger-delivery/: CLAUDE.md  butterbase_client.py  cartesia_client.py  hf_storage.py  imessage_sender.py  ledger_client.py  neo4j_writer.py  photon_config.py  verify_photon.py
ledger-delivery/photon-node/: package-lock.json  package.json  send_imessage.mjs
scripts/: README.md  claude_notebook.py  obsidian_sync.py  ralf_dedup.py  ralf_loop.py  spec_lesson_kuzu.py  vault_llamaindex.py
scripts/earnings/: README.md  _butterbase.ts  (+21 more)
spec_lesson/: CHANGELOG.md  README.md  __init__.py  audio_ingress.py  cli.py  lifecycle.py  orchestrator.py  session.py
thedi-v2-research/: CHECKLIST.md  CONTEXT.md  DECISION.md  README.md
(+296 files in other folders)
