[project]
name = "spec-lesson"
version = "0.1.0"
description = "ADHD live meeting assistant + Claude Code context bridge"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "freezegun>=1.4",
]

[project.scripts]
spec-lesson = "spec_lesson.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spec_lesson*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
files = ["spec_lesson"]
ignore_missing_imports = true
warn_unused_ignores = true
